Added user location

--- a/Map Hackwich/Info.plist
+++ b/Map Hackwich/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app requires the use of location services. </string>
 </dict>
 </plist>
